--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,7 +32,7 @@
 	      
 	      <p class="navbar-text navbar-right">
 		      <% if current_user %>
-		          <%= link_to('登出', destroy_user_session_path, :method => :delete, class: "navbar-link") %> |
+		          <%= link_to('登出', destroy_user_session_path, :method => :delete, class: "navbar-link") %>
 		      <% else %>
 		          <%= link_to('登录', new_session_path(:user), class: "navbar-link") %> | 
 		          <%#= link_to('注册', new_registration_path(:user), class: "navbar-link") %>
