--- a/app/views/layouts/login.html.erb
+++ b/app/views/layouts/login.html.erb
@@ -44,13 +44,17 @@
 	</header>
 
 	
-	<div class="container-fluid">
-		<%= yield %>
+	<div id="login" class="container-fluid">
+		<div class="row">
+			<div class="col-md-3 col-md-offset-2 panel panel-default">
+				<%= yield %>
+			</div>
+		</div>
 	</div>
 
 	<footer class="navbar-fixed" align="center">
 	  <div>
-	    <p>关于我门 | 联系我们</p>
+	    <p class="lead">关于我门 | 联系我们</p>
 	    <p>Copyright©2015 上海大唐移动通信设备公司</p>
 	  </div>
 	</footer>
