login errormessge edit

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -13,6 +13,8 @@ hr {border:1px #ffffff dashed;border-bottom:0;border-right:0;
 
 #login {
 	background-color: blue;
+	/* background: image-url("logo.jpg") no-repeat center;
+	backgroundackground-size:cover; */
 }
 
 .panel {
@@ -24,7 +26,6 @@ hr {border:1px #ffffff dashed;border-bottom:0;border-right:0;
 
 .logo {
 	background: image-url("logo.jpg") no-repeat left top;
-
 }
 
 .btn-md { 
