--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,7 +43,7 @@
 	  </div>
 	</header>
 
-	
+	<%= render :partial => "/common/messages" %>
 	<div class="container-fluid">
 		<%= yield %>
 	</div>
