--- a/app/views/layouts/login.html.erb
+++ b/app/views/layouts/login.html.erb
@@ -54,7 +54,7 @@
 
 	<footer class="navbar-fixed" align="center">
 	  <div>
-	    <p class="lead">关于我门 | 联系我们</p>
+	    <p class="lead">关于我们 | 联系我们</p>
 	    <p>Copyright©2015 上海大唐移动通信设备公司</p>
 	  </div>
 	</footer>
