--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -5,16 +5,10 @@ hr {border:1px #ffffff dashed;border-bottom:0;border-right:0;
            border-left:0;}
 
 
-.navbar {
-	margin-top: 10px;
-	margin-bottom: 10px;
-	margin-right: 20px;
-}
 
 #login {
-	background-color: blue;
-	/* background: image-url("logo.jpg") no-repeat center;
-	backgroundackground-size:cover; */
+	background: image-url("login_bg.jpg") no-repeat center;
+	backgroundackground-size:cover; 
 }
 
 .panel {
@@ -45,6 +39,16 @@ hr {border:1px #ffffff dashed;border-bottom:0;border-right:0;
  	padding-top: 20px;padding-bottom: 20px;
  }
 
+
+.mar-top-bot-10 {
+	margin-top: 10px;
+	margin-bottom: 10px;
+}
+
+.mar-top-bot-20 {
+	margin-top: 20px;
+	margin-bottom: 20px;
+}
  footer {
  	padding-top: 20px;
  }
