--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -17,6 +17,10 @@ hr {border:1px #ffffff dashed;border-bottom:0;border-right:0;
 	margin-bottom: 80px;
 }
 
+.btn-100 {
+	width: 100%;
+}
+
 
 .logo {
 	background: image-url("logo.jpg") no-repeat left top;
