--- a/app/views/common/_header.html.erb
+++ b/app/views/common/_header.html.erb
@@ -1,8 +1,8 @@
 <div class="container">
 	<div class="navbar-header">
 	  <a class="navbar-brand"  style="padding-top:2px;" href="#">
-	        <img src="<%= asset_path 'logo.jpg' %>"  alt="上海工商职业技术学院" />
-	      </a>
+	  	<%= image_tag "logo.jpg", alt: "上海工商职业技术学院"%>
+	  </a>
 	</div>
 
 	<nav class="collapse navbar-collapse bs-navbar-collapse">
