--- a/app/views/common/_home_header.html.erb
+++ b/app/views/common/_home_header.html.erb
@@ -12,7 +12,7 @@
     <li><a href="#">教师风采</a></li>
   </ul>
   </div>
-  <div class="container-fluid" style="padding-left: 0;padding-right: 0;">
-  	<img src="<%= asset_path 'home_01.jpg' %>" class="img-responsive" alt="上海工商职业技术学院">
+  <div class="container-fluid no-pad">
+    <%= image_tag "home_01.jpg", class: "img-responsive", alt: "上海工商职业技术学院"%>
   </div>
 </nav>
