--- a/app/views/layouts/login.html.erb
+++ b/app/views/layouts/login.html.erb
@@ -13,10 +13,12 @@
 		<%= render :partial => "/common/header" %>
 	</header>
 	<!-- header -->
-		
-	<div id="login" class="container-fluid" style="padding-left: 0;padding-right: 0;">
+	<div class="login-bg">	
+	  <%= image_tag "login_bg.jpg" %>	
+	 </div>
+	<div class="container-fluid">
 		<div class="row">
-			<div class="col-md-3 col-md-offset-2 panel panel-default">
+			<div class="col-md-3 col-md-offset-2 panel panel-default login-form">
 				<%= yield %>
 			</div>
 		</div>
