--- a/app/views/layouts/login.html.erb
+++ b/app/views/layouts/login.html.erb
@@ -6,7 +6,7 @@
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
-<body>
+<body class="<%= controller.controller_path.gsub('/','__') + '__' + controller.action_name %>" >
 	
 	<!-- header -->
 	<header class="navbar navbar-static-top bs-docs-nav mar-top-bot-10" id="top" role="banner">
