创建考试相关表

--- a/app/views/common/_home_header.html.erb
+++ b/app/views/common/_home_header.html.erb
@@ -8,8 +8,8 @@
         <span class="icon-bar"></span>
       </button>
     <li class="active"><a href="#">首页</a></li>
-    <li><a href="#">课程中心</a></li>
-    <li><a href="#">教师风采</a></li>
+    <li><%= link_to "课程中心", courses_path %></li>
+    <li><%= link_to "教师风采", "#" %></li>
   </ul>
   </div>
   <div class="container-fluid ">
