--- a/app/views/common/_home_header.html.erb
+++ b/app/views/common/_home_header.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-default" role="navigation">
+<nav class="navbar navbar-default main-home-header" role="navigation">
   <div class="container">
     <ul class="nav navbar-nav">
      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -12,7 +12,41 @@
     <li><%= link_to "教师风采", "#" %></li>
   </ul>
   </div>
-  <div class="container-fluid ">
-    <%= image_tag "home_01.jpg", class: "img-responsive", alt: "上海工商职业技术学院"%>
+    <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+    <!-- Indicators -->
+    <ol class="carousel-indicators buoyan-tec-carousel">
+      <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+      <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+      <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+    </ol>
+
+    <!-- Wrapper for slides -->
+    <div class="carousel-inner" role="listbox">
+      <div class="item active">
+        <%= image_tag "home_01.jpg", class: "img-responsive carousel-image", alt: "上海工商职业技术学院"%>
+        <div class="carousel-caption">
+        </div>
+      </div>
+      <div class="item">
+        <%= image_tag "home_01.jpg", class: "img-responsive carousel-image", alt: "上海工商职业技术学院"%>
+        <div class="carousel-caption">
+        </div>
+      </div>
+      <div class="item">
+        <%= image_tag "home_01.jpg", class: "img-responsive carousel-image", alt: "上海工商职业技术学院"%>
+        <div class="carousel-caption">
+        </div>
+      </div>
+    </div>
+
+    <!-- Controls -->
+    <!-- <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a> -->
   </div>
 </nav>
