--- a/app/views/common/_header.html.erb
+++ b/app/views/common/_header.html.erb
@@ -21,12 +21,14 @@
 	  
 	  <p class="navbar-text navbar-right">
 	      <% if current_user %>
-	      	  <span><%= current_user.phone%></span> | 
+	      	  <span>学生：</span><span><%= current_user.phone%></span> | 
 	          <%= link_to('退出', destroy_user_session_path, :method => :delete, class: "navbar-link") %>
+	      <% elsif current_teacher %>
+	      	  <span>教师：</span><span><%= current_teacher.phone%></span> | 
+	          <%= link_to('退出', destroy_teacher_session_path, :method => :delete, class: "navbar-link") %>
 	      <% else %>
 	          <%= link_to('登录', new_session_path(:user), class: "navbar-link") %> | 
-	          <%#= link_to('注册', new_registration_path(:user), class: "navbar-link") %>
-	          <%= link_to('注册', "#", class: "navbar-link") %>
+	          <%= link_to('注册', new_registration_path(:user), class: "navbar-link") %>
 	      <% end %>
 	    </p>
 	</nav>
