--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,17 +1,34 @@
-<h2>Sign up</h2>
+<div class="panel-heading" style="background: #ffffff;">
+    <ul class="nav nav-pills lead">
+      <li>
+        <%= link_to('用户登录', new_session_path(resource_name), class: "navbar-link") %>
+      </li>
+      <li class="active navbar-right">
+      <%= link_to('免费注册', new_registration_path(resource_name), class: "navbar-link") %>
+      </li>
+    </ul>
+</div>
+
+<div class="panel-body">
+
+  <div id="flash_alert">
+    <%= render 'common/login_messages'%>
+  </div>
+
 
 <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= f.error_notification %>
-
   <div class="form-inputs">
-    <%= f.input :email, required: true, autofocus: true %>
-    <%= f.input :password, required: true, hint: ("#{@minimum_password_length} characters minimum" if @validatable) %>
-    <%= f.input :password_confirmation, required: true %>
+    <%= f.input :phone, wrapper: 'login_input', autofocus: true, placeholder: "请输入用户名或账号" %>
+    <%= f.input :password, required: true, wrapper: 'password_input', placeholder: "请输入密码" %>
+    <%= f.input :password_confirmation, wrapper: 'password_input', required: true, placeholder: "请再次输入密码" %>
+
   </div>
 
   <div class="form-actions">
-    <%= f.button :submit, "Sign up" %>
+  	<p class="text-center"><%= f.submit "注 册", class: "btn btn-info btn-md btn-100" %></p>
   </div>
 <% end %>
 
-<%= render "devise/shared/links" %>
+
+</div>
+
