--- a/app/views/common/_home_header.html.erb
+++ b/app/views/common/_home_header.html.erb
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-default main-home-header" role="navigation">
-  <div class="container">
+  <div class="wrapper">
     <ul class="nav navbar-nav">
      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
         <span class="sr-only">Toggle navigation</span>
