--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
 	<%= render :partial => "/common/messages" %>
 	<!-- flash notice -->
 	
-	<div class="container">
+	<div class="wrapper">
 		<%= yield %>
 	</div>
 
