--- a/app/views/common/_header.html.erb
+++ b/app/views/common/_header.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="wrapper">
 	<div class="navbar-header">
 	  <a class="navbar-brand"  style="padding-top:2px;" href="#">
 	  	<%= image_tag "logo.jpg", alt: "上海工商职业技术学院"%>
