--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,1 +1,33 @@
-INDEX
+<section class="common-title">
+	<span class="pull-left">精品课程</span>
+	<span class="pull-right"><%= link_to "更多>>>", "#" %></span>
+</section>
+<section class="department-tabs">
+  <span><%= link_to "珠宝系", "#", class: "active"%></span>
+  <span><%= link_to "艺术设计系"%></span>
+  <span><%= link_to "汽车工程系"%></span>
+  <span><%= link_to "应用外语系"%></span>
+  <span><%= link_to "机电工程系"%></span>
+  <span><%= link_to "商务与管理系"%></span>
+  <span><%= link_to "计算机信息系"%></span>
+  <span><%= link_to "基础部"%></span>
+  <span><%= link_to "继续教育学院"%></span>
+  <span><%= link_to "餐旅服务学院"%></span>
+</section>
+<div class="wrapper">
+  <div class="vedio-content">
+    <%= image_tag("vedio-bg.png")%>
+    <p class="title">Python编程交互入门</p>
+    <p class="description">该课程一共15个课时</p>
+  </div>
+  <div class="vedio-content">
+    <%= image_tag("vedio-bg.png")%>
+    <p class="title">Python编程交互入门</p>
+    <p class="description">该课程一共15个课时</p>
+  </div>
+  <div class="vedio-content">
+    <%= image_tag("vedio-bg.png")%>
+    <p class="title">Python编程交互入门</p>
+    <p class="description">该课程一共15个课时</p>
+  </div>
+</div>
