--- a/app/views/layouts/login.html.erb
+++ b/app/views/layouts/login.html.erb
@@ -16,7 +16,7 @@
 	<div class="login-bg">	
 	  <%= image_tag "login_bg.jpg" %>	
 	 </div>
-	<div class="container-fluid">
+	<div class=".wrapper">
 		<div class="row">
 			<div class="col-md-3 col-md-offset-2 panel panel-default login-form">
 				<%= yield %>
