--- a/app/views/common/_home_header.html.erb
+++ b/app/views/common/_home_header.html.erb
@@ -10,6 +10,7 @@
     <li class="active"><a href="#">首页</a></li>
     <li><%= link_to "课程中心", courses_path %></li>
     <li><%= link_to "教师风采", "#" %></li>
+    <li><%= link_to "个人中心", users_path %></li>
   </ul>
   </div>
     <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
