--- a/app/assets/stylesheets/user.scss
+++ b/app/assets/stylesheets/user.scss
@@ -3,15 +3,15 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 .user__index {
+
   nav { 
-	text-align: center; 
+	  text-align: center; 
     
     p.self-info{
-      margin-top: 8px;
-      margin-bottom: 8px;
+      line-height: 40px;
       border-top: 6px solid #337ab7;
       border-bottom: 6px solid #337ab7;
-
+      margin-bottom: 20px;
     }
 
   }
