--- a/app/views/user/index.html.erb
+++ b/app/views/user/index.html.erb
@@ -24,17 +24,17 @@
       	    <div class="pull-left"><%= image_tag("user.png")%></div>
           </div>
           <div class="col-md-9">
-            <table class="table pull-right">
+            <table class="table">
 		      <tr>
-		        <td><span class="text-primary">&bull;&nbsp;</span>姓名：刘某某</td>
+		        <td><span class="text-primary">&bull;&nbsp;</span>姓名：<%= current_user.name%></td>
 		        <td><span class="text-primary">&bull;&nbsp;</span>学习时长：830小时40分钟10秒</td>
 		      </tr>
 		      <tr>
-		        <td><span class="text-primary">&bull;&nbsp;</span>职位：学生</td>
+		        <td><span class="text-primary">&bull;&nbsp;</span>职位：<%= current_user.position%></td>
 		        <td><span class="text-primary">&bull;&nbsp;</span>已学课程：34门</td>
 		      </tr>
 		      <tr>
-		        <td><span class="text-primary">&bull;&nbsp;</span>学号：20150842192</td>
+		        <td><span class="text-primary">&bull;&nbsp;</span>学号：<%= current_user.number%></td>
 		        <td><span class="text-primary">&bull;&nbsp;</span>未学课程：10门</td>
 		      </tr>
 		      <tr>
