--- a/app/views/common/_header.html.erb
+++ b/app/views/common/_header.html.erb
@@ -1,34 +1,36 @@
-<div class="wrapper">
-	<div class="navbar-header">
-	  <a class="navbar-brand"  style="padding-top:2px;" href="#">
-	  	<%= image_tag "logo.jpg", alt: "上海工商职业技术学院"%>
-	  </a>
-	</div>
+<nav class="main-nav">
+	<div class="wrapper">
+		<div class="navbar-header">
+		  <a class="navbar-brand"  style="padding-top:2px;" href="#">
+		  	<%= image_tag "logo.jpg", alt: "上海工商职业技术学院"%>
+		  </a>
+		</div>
 
-	<nav class="collapse navbar-collapse bs-navbar-collapse">
-	 <div id="navbar" class="navbar-collapse collapse col-md-2 col-md-offset-4">
-	      <form class="navbar-form navbar-left" role="search">
-			<div class="input-group">
-		      <input type="text" class="form-control" placeholder="搜索">
-		      <span class="input-group-btn">
-		        <button class="btn btn-default" type="button">
-		        	<span class="glyphicon glyphicon-search" aria-hidden="true"></span>
-				</button>
-		      </span>
+		<nav class="collapse navbar-collapse bs-navbar-collapse">
+		 <div id="navbar" class="navbar-collapse collapse col-md-2 col-md-offset-4">
+		      <form class="navbar-form navbar-left" role="search">
+				<div class="input-group">
+			      <input type="text" class="form-control" placeholder="搜索">
+			      <span class="input-group-btn">
+			        <button class="btn btn-default" type="button">
+			        	<span class="glyphicon glyphicon-search" aria-hidden="true"></span>
+					</button>
+			      </span>
+			    </div>
+			  </form> 
 		    </div>
-		  </form> 
-	    </div>
-	  <p class="navbar-text pull-right">
-	      <% if current_user %>
-	      	  <span>学生：</span><span><%= current_user.phone%></span> | 
-	          <%= link_to('退出', destroy_user_session_path, :method => :delete, class: "navbar-link") %>
-	      <% elsif current_teacher %>
-	      	  <span>教师：</span><span><%= current_teacher.phone%></span> | 
-	          <%= link_to('退出', destroy_teacher_session_path, :method => :delete, class: "navbar-link") %>
-	      <% else %>
-	          <%= link_to('登录', new_session_path(:user), class: "navbar-link") %> | 
-	          <%= link_to('注册', new_registration_path(:user), class: "navbar-link") %>
-	      <% end %>
-	    </p>
-	</nav>
-</div>
+		  <p class="navbar-text pull-right">
+		      <% if current_user %>
+		      	  <span>学生：</span><span><%= current_user.phone%></span> | 
+		          <%= link_to('退出', destroy_user_session_path, :method => :delete, class: "navbar-link") %>
+		      <% elsif current_teacher %>
+		      	  <span>教师：</span><span><%= current_teacher.phone%></span> | 
+		          <%= link_to('退出', destroy_teacher_session_path, :method => :delete, class: "navbar-link") %>
+		      <% else %>
+		          <%= link_to('登录', new_session_path(:user), class: "navbar-link") %> | 
+		          <%= link_to('注册', new_registration_path(:user), class: "navbar-link") %>
+		      <% end %>
+		    </p>
+		</nav>
+	</div>
+</nav>
