--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,126 +1,104 @@
-<section class="common-title">
-	<span class="pull-left">精品课程</span>
-	<span class="pull-right"><%= link_to "更多", "#", class: "more" %></span>
-</section>
-<section class="department-tabs">
-  <span><%= link_to "珠宝系", "#", class: "active"%></span>
-  <span><%= link_to "艺术设计系"%></span>
-  <span><%= link_to "汽车工程系"%></span>
-  <span><%= link_to "应用外语系"%></span>
-  <span><%= link_to "机电工程系"%></span>
-  <span><%= link_to "商务与管理系"%></span>
-  <span><%= link_to "计算机信息系"%></span>
-  <span><%= link_to "基础部"%></span>
-</section>
-<div class="vedio-course-content wrapper">
-  <%= link_to "", class: 'single-vedio-content' do %>
-	  <div class="vedio-content">
-	    <%= image_tag("vedio-bg.png")%>
-	    <p class="title">Python编程交互入门</p>
-	    <p class="description">
-        <span class="pull-left">该课程一共15个课时</span>
-        <span class="pull-right favorite">20000人收藏</span>
-      </p>
-	  </div>
-	<%end%>
-  <%= link_to "", class: 'single-vedio-content' do %>
-	  <div class="vedio-content">
-	    <%= image_tag("vedio-bg.png")%>
-	    <p class="title">Python编程交互入门</p>
-	    <p class="description">
-        <span class="pull-left">该课程一共15个课时</span>
-        <span class="pull-right favorite">20000人收藏</span>
-      </p>
-	  </div>
-	<%end%>
-  <%= link_to "",  class: 'single-vedio-content' do %>
-	  <div class="vedio-content">
-	    <%= image_tag("vedio-bg.png")%>
-	    <p class="title">Python编程交互入门</p>
-	    <p class="description">
-        <span class="pull-left">该课程一共15个课时</span>
-        <span class="pull-right favorite">20000人收藏</span>
-      </p>
-	  </div>
-	<%end%>
-	<%= link_to "", class: 'single-vedio-content' do %>
-	  <div class="vedio-content">
-	    <%= image_tag("vedio-bg.png")%>
-	    <p class="title">Python编程交互入门</p>
-	    <p class="description">
-        <span class="pull-left">该课程一共15个课时</span>
-        <span class="pull-right favorite">20000人收藏</span>
-      </p>
-	  </div>
-	<%end%>
-	<%= link_to "", class: 'single-vedio-content' do %>
-	  <div class="vedio-content">
-	    <%= image_tag("vedio-bg.png")%>
-	    <p class="title">Python编程交互入门</p>
-	    <p class="description">
-        <span class="pull-left">该课程一共15个课时</span>
-        <span class="pull-right favorite">20000人收藏</span>
-      </p>
-	  </div>
-	<%end%>
-	<%= link_to "", class: 'single-vedio-content' do %>
-	  <div class="vedio-content">
-	    <%= image_tag("vedio-bg.png")%>
-	    <p class="title">Python编程交互入门</p>
-	    <p class="description">
-        <span class="pull-left">该课程一共15个课时</span>
-        <span class="pull-right favorite">20000人收藏</span>
-      </p>
-	  </div>
-	<%end%>
-</div>
-<section class="common-title">
-	<span class="pull-left">教师风采</span>
-	<span class="pull-right"><%= link_to "更多", "#", class: "more" %></span>
-</section>
-<div class="info-teachers-content wrapper">
-  <div class="teacher-content">
-    <%= link_to image_tag("teacher.png")%>
-    <p>国家优秀教师称号</p>
+<div class="main-content">
+  <section class="common-title">
+  	<span class="pull-left">精品课程</span>
+  	<span class="pull-right common"><%= link_to "更多", "#", class: "more" %></span>
+  </section>
+  <section class="department-tabs">
+    <span><%= link_to "珠宝系", "#", class: "first-tab factive"%></span>
+    <span><%= link_to "艺术设计系"%></span>
+    <span><%= link_to "汽车工程系"%></span>
+    <span><%= link_to "应用外语系"%></span>
+    <span><%= link_to "机电工程系"%></span>
+    <span><%= link_to "商务与管理系"%></span>
+    <span><%= link_to "计算机信息系"%></span>
+    <span><%= link_to "基础部"%></span>
+  </section>
+  <div class="vedio-course-content wrapper">
+    <% @courses.each do |course|%>
+      <div class='single-vedio-content'>
+    	  <div class="vedio-content">
+    	    <%= link_to image_tag("vedio-bg.png"), show_courses_path(course.number)%>
+    	    <p class="title"><%= link_to course.name, show_courses_path(course.number) %></p>
+    	    <p class="description">
+            <span class="pull-left"><%= link_to course.description, show_courses_path(course.number) %></span>
+            <a class="pull-right favorite">20000人收藏</a>
+          </p>
+    	  </div>
+      </div>
+    <%end%>
+    <% @courses.each do |course|%>
+      <div class='single-vedio-content'>
+        <div class="vedio-content">
+          <%= link_to image_tag("vedio-bg.png"), show_courses_path(course.number)%>
+          <p class="title"><%= link_to course.name, show_courses_path(course.number) %></p>
+          <p class="description">
+            <span class="pull-left"><%= link_to course.description, show_courses_path(course.number) %></span>
+            <a class="pull-right favorite">20000人收藏</a>
+          </p>
+        </div>
+      </div>
+    <%end%>
+    <% @courses.each do |course|%>
+      <div class='single-vedio-content'>
+        <div class="vedio-content">
+          <%= link_to image_tag("vedio-bg.png"), show_courses_path(course.number)%>
+          <p class="title"><%= link_to course.name, show_courses_path(course.number) %></p>
+          <p class="description">
+            <span class="pull-left"><%= link_to course.description, show_courses_path(course.number) %></span>
+            <a class="pull-right favorite">20000人收藏</a>
+          </p>
+        </div>
+      </div>
+    <%end%>
   </div>
-  <div class="teacher-content">
-    <%= link_to image_tag("teacher.png")%>
-    <p>国家优秀教师称号</p>
-  </div>
-  <div class="teacher-content">
-    <%= link_to image_tag("teacher.png")%>
-    <p>国家优秀教师称号</p>
-  </div>
-  <div class="teacher-content">
-    <%= link_to image_tag("teacher.png")%>
-    <p>国家优秀教师称号</p>
-  </div>
-  <div class="teacher-content">
-    <%= link_to image_tag("teacher.png")%>
-    <p>国家优秀教师称号</p>
-  </div>
-  <div class="teacher-content">
-    <%= link_to image_tag("teacher.png")%>
-    <p>国家优秀教师称号</p>
-  </div>
-</div>
-<section class="common-title">
-	<span class="pull-left">校园文化</span>
-	<span class="pull-right"><%= link_to "更多", "#", class: "more" %></span>
-</section>
-
-<div class="info-school-content wrapper">
-  <div class="control-wrap"><a class="prev" href="">向左</a><a class="next" href="">向右</a>
-    <div class="bx_container">
-      <ul id="school-slide-content">
-        <li><%= image_tag("school.png", style: "height: 190px; width: 250px")%></li>
-        <li><%= image_tag("school.png", style: "height: 190px; width: 250px")%></li>
-        <li><%= image_tag("school.png", style: "height: 190px; width: 250px")%></li>
-        <li><%= image_tag("school.png", style: "height: 190px; width: 250px")%></li>
-        <li><%= image_tag("school.png", style: "height: 190px; width: 250px")%></li>
-        <li><%= image_tag("school.png", style: "height: 190px; width: 250px")%></li>
-        <li><%= image_tag("school.png", style: "height: 190px; width: 250px")%></li>
-      </ul>
+  <section class="common-title">
+  	<span class="pull-left">教师风采</span>
+  	<span class="pull-right"><%= link_to "更多", "#", class: "more" %></span>
+  </section>
+  <div class="info-teachers-content wrapper">
+    <div class="teacher-content">
+      <%= link_to image_tag("teacher.png")%>
+      <p>国家优秀教师称号</p>
     </div>
+    <div class="teacher-content">
+      <%= link_to image_tag("teacher.png")%>
+      <p>国家优秀教师称号</p>
+    </div>
+    <div class="teacher-content">
+      <%= link_to image_tag("teacher.png")%>
+      <p>国家优秀教师称号</p>
+    </div>
+    <div class="teacher-content">
+      <%= link_to image_tag("teacher.png")%>
+      <p>国家优秀教师称号</p>
+    </div>
+    <div class="teacher-content">
+      <%= link_to image_tag("teacher.png")%>
+      <p>国家优秀教师称号</p>
+    </div>
+    <div class="teacher-content">
+      <%= link_to image_tag("teacher.png")%>
+      <p>国家优秀教师称号</p>
+    </div>
+  </div>
+  <section class="common-title">
+  	<span class="pull-left">校园文化</span>
+  	<span class="pull-right"><%= link_to "更多", "#", class: "more" %></span>
+  </section>
+
+  <div id="xc-carousel" class="xc-carousel">
+    <a class="nav prev" href="#"></a>
+    <div class="carousel_items_holder">
+        <ul class="carousel_items">
+          <li><%= image_tag("school.png")%></li>
+          <li><%= image_tag("school.png")%></li>
+          <li><%= image_tag("school.png")%></li>
+          <li><%= image_tag("school.png")%></li>
+          <li><%= image_tag("school.png")%></li>
+          <li><%= image_tag("school.png")%></li>
+          <li><%= image_tag("school.png")%></li>
+        </ul>
+    </div>
+    <a class="nav next" href="#"></a>
   </div>
 </div>
