--- a/app/views/layouts/login.html.erb
+++ b/app/views/layouts/login.html.erb
@@ -9,7 +9,7 @@
 <body class="<%= controller.controller_path.gsub('/','__') + '__' + controller.action_name %>" >
 	
 	<!-- header -->
-	<header class="navbar navbar-static-top bs-docs-nav mar-top-bot-10" id="top" role="banner">
+	<header class="navbar navbar-static-top bs-docs-nav" id="top" role="banner">
 		<%= render :partial => "/common/header" %>
 	</header>
 	<!-- header -->
