--- a/app/views/common/_home_header.html.erb
+++ b/app/views/common/_home_header.html.erb
@@ -1,17 +1,14 @@
 <nav class="navbar navbar-default main-home-header" role="navigation">
   <div class="wrapper">
     <ul class="nav navbar-nav">
-     <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-    <li class="active"><a href="#">首页</a></li>
-    <li><%= link_to "课程中心", courses_path %></li>
-    <li><%= link_to "教师风采", "#" %></li>
-    <li><%= link_to "个人中心", user_index_path %></li>
-  </ul>
+      <%= show_menu%>
+   </ul>
   </div>
   <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
     <!-- Indicators -->
