--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,7 +1,7 @@
 <div class="panel-heading" style="background: #ffffff;">
     <ul class="nav nav-pills lead">
       <li>
-        <%= link_to('用户登录', new_session_path(resource_name), class: "navbar-link") %>
+        <%= link_to(resource_name == :user ? '用户登录' : '教师登录', new_session_path(resource_name), class: "navbar-link") %>
       </li>
       <li class="active navbar-right">
       <%= link_to('免费注册', new_registration_path(resource_name), class: "navbar-link") %>
