js remove require_tree

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,7 @@
+<%= content_for :script do %>
+  <%= javascript_include_tag "slider.min", "_page_index" %>
+<%end%>
+
 <div class="main-content">
   <section class="common-title">
   	<span class="pull-left">精品课程</span>
