--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,7 @@
   <title>上海工商技术学院</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+  <%= yield :script %>
   <%= csrf_meta_tags %>
 </head>
 <body class="<%= controller.controller_path.gsub('/','__') + '__' + controller.action_name %>" >
