self info center edit

--- a/app/assets/stylesheets/user.scss
+++ b/app/assets/stylesheets/user.scss
@@ -2,7 +2,7 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-body.user__index {
+body.user__index, body.user__show, body.user__update {
 
   nav { 
 	  text-align: center; 
