--- a/app/views/user/_nav_left.html.erb
+++ b/app/views/user/_nav_left.html.erb
@@ -2,12 +2,12 @@
  <p class="text-primary self-info"><strong>个人中心</strong></p>
 
   <ul class="nav nav-pills nav-stacked center-block">
-    <li class="active"><a href="#">我的课程</a></li>
+    <li><%= link_to "我的课程", user_path %></li>
     <li class=""><a href="#">我的考试</a></li>
     <li class=""><a href="#">成绩查询</a></li>
     <li class=""><a href="#">我的收藏</a></li>
     <li class=""><a href="#">我的问答</a></li>
     <li class=""><a href="#">讨论中心</a></li>
-    <li class=""><a href="#">我的账户</a></li>
+    <li class="active"><%= link_to "我的账户", user_path %></li>
   </ul>
 </nav>
